Fixed headers on admin pages (replaced "List of Navigation Items" with what they were a list of)..

--- a/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
@@ -7,7 +7,7 @@
 
 <script src="~/Scripts/Admin/NavigationItems/NavigationItems.js"></script>
 <div class="panel panel-heading" >
-    <h2>Admin Navigation Items</h2>
+    <h2>Navigation Items Admin Page</h2>
 </div>
 
 <div class="panel">
