--- a/Praesidium/Praesidium/Views/Admin/Sections.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Sections.cshtml
@@ -3,13 +3,13 @@
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 <div class="panel panel-heading">
-    <h2>Admin Sections</h2>
+    <h2>Sections Admin Page</h2>
 </div>
 
 <div class="panel">
     <div style="">
         <br />
-        <h4 class="col-md-11"><b>List of Navigation Items</b></h4>
+        <h4 class="col-md-11"><b>List of Sections</b></h4>
         <p style="float: right;" class="col-md-1">
             @Html.ActionLink("Create New", "SectionsCreate", null, new { @class = "btn btn-info" })
         </p>
