--- a/Praesidium/Praesidium/Views/Admin/UserTypes.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/UserTypes.cshtml
@@ -4,13 +4,13 @@
 
 
 <div class="panel panel-heading">
-    <h2>Admin User Types</h2>
+    <h2>User Types Admin Page</h2>
 </div>
 
 <div class="panel">
     <div style="">
         <br />
-        <h4 class="col-md-11"><b>List of Navigation Items</b></h4>
+        <h4 class="col-md-11"><b>List of User Types</b></h4>
         <p style="float: right;" class="col-md-1">
             @Html.ActionLink("Create New", "UserTypesCreate", null, new { @class = "btn btn-info" })
         </p>
