--- a/Praesidium/Praesidium/Views/Admin/Files.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Files.cshtml
@@ -1,89 +1,95 @@
-﻿@using Microsoft.Ajax.Utilities
-@model IEnumerable<Praesidium.Data_Models.Admin.FileView>
+﻿@model PagedList.IPagedList<Praesidium.Data_Models.Admin.FileView>
+@using PagedList.Mvc;<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
-@{
-    ViewBag.Title = "Files";
-}
 
-<h2>Files</h2>
-
-<p>
-    @Html.ActionLink("Create New", "FilesCreate")
+<script src="~/Scripts/Admin/NavigationItems/NavigationItems.js"></script>
+<div class="panel panel-heading">
+    <h2>File Admin Page</h2>
+</div>
+<p style="float: right;" class="col-md-1">
+    @Html.ActionLink("Add New File", "FilesCreate", null, new { @class = "btn btn-info" })
 </p>
-<table class="table">
+
+<table class="table panel table-striped">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Title)
+            Title
         </th>
         <th style="width: 20%;">
-            @Html.DisplayNameFor(model => model.FileName)
+            FileName
         </th>
         <th>
             Content
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            Description
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UploadedBy)
+            UploadedBy
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DateUploaded)
+            DateUploaded
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ModifiedBy)
+            ModifiedBy
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DateModified)
+            DateModified
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FileName)
-        </td>
-        <td>
-            @Html.ActionLink("Download", "File", "Download", new {id = item.RecId}, null)
-            <br/>
-            <a class="iframe" href="https://docs.google.com/gview?url=@Url.Action("File", "Download", new {id = item.RecId}, Request.Url.Scheme)">View</a>
-        </td>
-        <td>
-            @{
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FileName)
+            </td>
+            <td>
+                @Html.ActionLink("Download", "File", "Download", new {id = item.RecId}, null)
+                <br/>
+                <a class="iframe" href="https://docs.google.com/gview?url=@Url.Action("File", "Download", new {id = item.RecId}, Request.Url.Scheme)">View</a>
+            </td>
+            <td>
+                @{
 
-                if (item.Description.Length > 25)
-                {
-                    @Html.Raw(HttpUtility.HtmlDecode(item.Description.Substring(0, 25) + "&hellip;"))
+                    if (item.Description.Length > 25)
+                    {
+                        @Html.Raw(HttpUtility.HtmlDecode(item.Description.Substring(0, 25) + "&hellip;"))
 
+                    }
+                    else
+                    {
+                        @Html.Raw(HttpUtility.HtmlDecode(item.Description))
+                    }
                 }
-                else
-                {
-                    @Html.Raw(HttpUtility.HtmlDecode(item.Description))
-                }
-            }
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UploadedBy)
-        </td>
-        <td
-        >@Html.DisplayFor(modelItem => item.DateUploaded)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateModified)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "FilesEdit", new {id = item.RecId}) |
-            @*@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
-            @Html.ActionLink("Delete", "Delete", new {/* id=item.PrimaryKey */})
-        </td>
-    </tr>
-}
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UploadedBy)
+            </td>
+            <td
+            >@Html.DisplayFor(modelItem => item.DateUploaded)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ModifiedBy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateModified)
+            </td>
+            <td>
+                @Html.ActionLink(" ", "FilesEdit", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-edit", @title = "Edit File" })
+
+                @*@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
+                @*@Html.ActionLink("Delete", "Delete", new {/* id=item.PrimaryKey */})*@
+            </td>
+        </tr>
+    }
 
 </table>
+
+<div style="text-align: center;">
+    @Html.PagedListPager(Model, page => Url.Action("Files",
+        new { page }))
+</div>
