--- a/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
@@ -113,13 +113,13 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.UploadedBy, "UploadedBy", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("UploadedBy", (SelectList)ViewBag.users, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.UploadedBy, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
@@ -129,5 +129,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Files")
 </div>
