--- a/Praesidium/Praesidium/Views/Admin/FilesEdit.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesEdit.cshtml
@@ -7,24 +7,6 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <script src="~/scripts/tinymce/tinymce.min.js"></script>
-    <!-- Script to wire up your TinyMCE editor -->
-        <script type="text/javascript">
-        tinyMCE.init({
-            // General options
-            mode: "textareas",
-            theme: "modern",
-            // Theme options
-            theme_advanced_buttons1: "save,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,|,styleselect,formatselect,fontselect,fontsizeselect",
-            theme_advanced_buttons2: "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor",
-            theme_advanced_buttons3: "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen",
-            theme_advanced_buttons4: "insertlayer,moveforward,movebackward,absolute,|,styleprops,spellchecker,|,cite,abbr,acronym,del,ins,attribs,|,visualchars,nonbreaking,template,blockquote,pagebreak,|,insertfile,insertimage",
-            theme_advanced_toolbar_location: "top",
-            theme_advanced_toolbar_align: "left",
-            theme_advanced_statusbar_location: "bottom",
-            theme_advanced_resizing: true
-        });
-        </script>
 
     <div class="form-horizontal">
         <hr />
@@ -32,23 +14,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FileName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FileName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.FileName, new { htmlAttributes = new { @class = "form-control", @readonly= true } })
                 @Html.ValidationMessageFor(model => model.FileName, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.FileStore, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.FileStore, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FileStore, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
         <div class="form-group">
             @Html.LabelFor(model => model.FkShSySection, "Section", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("FkShSySection", (SelectList)ViewBag.section, "Please select", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.FkShSySection, (SelectList)ViewBag.section, "Please select", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FkShSySection, "", new { @class = "text-danger" })
             </div>
         </div>
