changed color of font in admin topmenu welcome back message

--- a/Praesidium/Praesidium/Views/Shared/_AdminTopMenu.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_AdminTopMenu.cshtml
@@ -24,7 +24,7 @@
                         @Html.ActionLink("Logout", "Logout", "Login", null, new { @class = "btn btn-sm btn-danger" })
                     </div>
                     <div class="pull-right" style="display:table-cell; vertical-align: middle;">
-                        <p style="padding-right: 5px;">Welcome back, @LoggedInAs</p>
+                        <p style="padding-right: 5px; color: white; font-weight: bold;">Welcome back, @LoggedInAs</p>
                     </div>
                 </div>
 
