--- a/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
@@ -6,19 +6,24 @@
 }
 
 <script src="~/Scripts/Admin/NavigationItems/NavigationItems.js"></script>
-<div class="panel panel-heading" >
+<div class="panel panel-heading">
     <h2>Navigation Items Admin Page</h2>
 </div>
 
 <div class="panel">
+
     <div style="">
-        <br />
-        <h4 class="col-md-11"><b>List of Navigation Items</b></h4>
-        <p style="float: right;" class="col-md-1">
-            @Html.ActionLink("Create New", "NavigationItemsCreate", null, new { @class = "btn btn-info" })
-        </p>
+        <div class="col-md-10">
+            <h4><b>List of Navigation Items</b></h4>
+        </div>
+        <div class="col-md-2">
+            <p>
+                @Html.ActionLink("Create New", "NavigationItemsCreate", null, new { @class = "btn btn-info pull-right" })
+            </p>
+        </div>
         <br />
     </div>
+
     <table class="table panel table-striped">
         <tr>
             <th>
@@ -36,7 +41,9 @@
             <th>
                 @Html.ActionLink("Active", "NavigationItems", new { sortOrder = ViewBag.IsActiveSortParm })
             </th>
-            <th></th>
+            <th style="width: 165px;">
+                Actions
+            </th>
         </tr>
 
         @foreach (var item in Model)
@@ -57,7 +64,7 @@
                 <td style="width: 3%; text-align: center;">
                     @Html.DisplayFor(modelItem => item.IsActive)
                 </td>
-                <td style="width: 10%;">
+                <td>
                     @*<button style="font-family: 'Agency FB'; color: white" id="editModal" data-target="#edit" data-toggle="modal" data-id="@item.RecId" data-controller="@item.Controller" data-action="@item.Action" data-displaytext="@item.DisplayText" data-section="@item.FkShSySection" data-active="@item.IsActive"><span class="glyphicon glyphicon-edit"></span></button> |*@
                     @Html.ActionLink(" ", "NavigationItemsEdit", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-edit", @title = "Edit Navigation Item" })
                     @Html.ActionLink(" ", "NavigationItemsDetails", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-eye-open", @title = "View Details" })
