--- a/Praesidium/Praesidium/Views/Admin/Sections.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Sections.cshtml
@@ -8,13 +8,17 @@
 
 <div class="panel">
     <div style="">
-        <br />
-        <h4 class="col-md-11"><b>List of Sections</b></h4>
-        <p style="float: right;" class="col-md-1">
-            @Html.ActionLink("Create New", "SectionsCreate", null, new { @class = "btn btn-info" })
-        </p>
+        <div class="col-md-10">
+            <h4><b>List of Sections</b></h4>
+        </div>
+        <div class="col-md-2">
+            <p>
+                @Html.ActionLink("Create New", "SectionsCreate", null, new { @class = "btn btn-info pull-right" })
+            </p>
+        </div>
         <br />
     </div>
+
     <table class="table panel table-striped">
         <tr>
             <th>
@@ -23,7 +27,9 @@
             <th>
                 Active
             </th>
-            <th></th>
+            <th style="width: 165px;">
+                Actions
+            </th>
         </tr>
 
         @foreach (var item in Model)
