--- a/Praesidium/Praesidium/Views/Admin/UserTypes.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/UserTypes.cshtml
@@ -9,13 +9,17 @@
 
 <div class="panel">
     <div style="">
-        <br />
-        <h4 class="col-md-11"><b>List of User Types</b></h4>
-        <p style="float: right;" class="col-md-1">
-            @Html.ActionLink("Create New", "UserTypesCreate", null, new { @class = "btn btn-info" })
-        </p>
+        <div class="col-md-10">
+            <h4><b>List of User Types</b></h4>
+        </div>
+        <div class="col-md-2">
+            <p>
+                @Html.ActionLink("Create New", "UserTypesCreate", null, new { @class = "btn btn-info pull-right" })
+            </p>
+        </div>
         <br />
     </div>
+
     <table class="table">
         <tr>
             <th>
@@ -24,7 +28,9 @@
             @*<th>
                 Deleted
             </th>*@
-            <th></th>
+            <th style="width: 165px;">
+                Actions
+            </th>
         </tr>
 
         @foreach (var item in Model)
