Team info in footer

--- a/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
+++ b/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
@@ -28,7 +28,7 @@
                     <h4>Alyssa Kozlowski</h4>
                     <h4>Role: Product Owner</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Alyssa">Learn More</div>
-                    <div id="Alyssa" class="collapse">Alyssa is 21 years old and started early college when she was 15 years old. She started undergrad as Premed but switched her major to Computer Information Systems.  She will be graduating with a Bachelor’s degree in CIS this spring. She plans on furthering her education with a Master’s or Doctorate. She has been very interest in computers her whole life and Ferris State University has given her a great opportunity to pursue her passion.</div>
+                    <div id="Alyssa" class="collapse">Alyssa is 21 years old and started early college when she was 15 years old. She started undergrad as Premed but switched her major to Computer Information Systems.  She will be graduating with a Bachelor’s degree in CIS this spring. She plans on furthering her education with a Master’s or a Doctorate. She has been very interested in computers her whole life and Ferris State University has given her a great opportunity to pursue her passion.</div>
                 </div>
             </div>
         </div>
@@ -94,12 +94,12 @@
         <!-- Second Member's Profile -->
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/Tyler.jpg" style="min-height: 300px; min-width: 175px;">
                 <div class="caption text-center">
                     <h4>Tyler Ver Merris</h4>
                     <h4>Role: Scrum Member</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Tyler">Learn More</div>
-                    <div id="Tyler" class="collapse">More Info About Tyler</div>
+                    <div id="Tyler" class="collapse">Tyler is a graduating senior in the Computer Information Systems program at Ferris State University. After he graduates he wants to pursue a career in the IT field, and eventually end up in a Systems Administrator position where he can grow his troubleshooting and technological knowledge. He is a native of Grand Rapids, MI and loves to golf in his spare time.</div>
                 </div>
             </div>
         </div>
