--- a/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/FilesCreate.cshtml
@@ -59,7 +59,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextBoxFor(model => model.Title, new { htmlAttributes = new { @class = "form-control"}, autofocus="autofocus"})
                     @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                 </div>
             </div>
