--- a/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Statistics.cshtml
@@ -14,13 +14,13 @@
         <!-- Quick Facts section, created as a panel -->
 
             <div class="panel-body" id="borders">
-                <h2 id="headers_borders">Quick Facts</h2>
+                <h2 id="headers_borders">Links For Statistics</h2>
                 <ul>
-                    <li>Fact 1</li>
-                    <li>Fact 2</li>
-                    <li>Fact 3</li>
-                    <li>Fact 4</li>
-                    <li>Fact 5</li>
+                    <li><A HREF="http://arkofhopeforchildren.org/child-trafficking/child-trafficking-statistics">Ark Of Hope Org</A></li>
+                    <li><A href="https://polarisproject.org/facts"> Polaris Project Facts</A></li>
+                    <li><A href="https://humantraffickinghotline.org/states">Hotline Statistics</A></li>
+                    <li><A href="http://www.youthfortomorrow.org/Girls-On-A-Journey-Program">Youth For Tomorrow </A></li>
+         
                 </ul>
             </div>
 
