--- a/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
@@ -41,9 +41,11 @@
             <div class="col-md-4 align-center " id="borders" style="min-height:150px;">
                 <h3 id="headers_borders">Teacher Page Links</h3>
                 <ul class="align-left" id="p_textborders">
-                    <li><A HREF="http://www.google.com">FACTS</A></li>
-                    <li><A HREF="http://www.google.com">FACTS</A></li>
-                    <li><A HREF="https://www.google.com">FACTS</A></li>
+                    <li><A HREF="https://humaneeducation.org/blog/2012/resources-for-teaching-about-human-trafficking/">Human Education Org</A></li>
+                    <li><A HREF="https://crees.ku.edu/sites/crees.ku.edu/files/docs/Trafficking%20Resources%20for%20Educators.pdf">Resources For Educators</A></li>
+                    <li><A HREF="http://www.tolerance.org/toolkit/human-trafficking">Tolerance Org</A></li>
+                    <li><a href="http://www.fdfi.org/human-trafficking-education-curriculum.html"> FDFI Org</a></li>
+                    <li><a href="http://www.endslaverynow.org/blog/articles/anti-trafficking-education-in-high-schools"> End Slavery Now Org</a></li>
                 </ul>
             </div>
 
