--- a/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
@@ -35,9 +35,9 @@
             <div class="col-md-4 align-center " id="borders" style="min-height:150px;">
                 <h3 id="headers_borders">Teen Page Resources</h3>
                 <ul class="align-left" id="p_textborders">
-                    <li><A HREF="http://www.google.com">FACTS</A></li>
-                    <li><A HREF="http://www.google.com">FACTS</A></li>
-                    <li><A HREF="https://www.google.com">FACTS</A></li>
+                    <li><A HREF="http://www.teensontrafficking.org/">Teens On Trafficking Org</A></li>
+                    <li><A HREF="http://sharedhope.org/what-we-do/prevent/awareness/">Shared Hope Org</A></li>
+                    <li><A HREF="https://polarisproject.org/">Polaris Project</A></li>
                    
                 </ul>
             </div>
