--- a/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
@@ -28,7 +28,7 @@
             <p class="p_text">
                 These are quizzes provided to test your knowledge of cyber security. These quizzes are specificially designed for the demographics we have listed
                 under the cyber security tab. If you aren't sure which demographic you fall under, please refer to the each page for more information, good luck!
-                </p>
+            </p>
         </div>
     </div>
     <div class="row">
@@ -52,17 +52,17 @@
                     default:
                         <div class="row">
                             <div class="col-md-3 panel" id="borders">
-                              
-                                    <h3 id="headers_borders">
-                                        Quiz: Cyber Security: <br />Youth
-                                    </h3>
-                                    @Html.ActionLink("Take the quiz now!", "Quiz", new { quizId = 1 }, new { @class = "btn btn-info", @title = "", @style = "margin-left: 50px;margin-bottom:10px; " })
-                              
-                                </div>
+
+                                <h3 id="headers_borders">
+                                    Quiz: Cyber Security: <br />Youth
+                                </h3>
+                                @Html.ActionLink("Take the quiz now!", "Quiz", new { quizId = 1 }, new { @class = "btn btn-info", @title = "", @style = "margin-left: 50px;margin-bottom:10px; " })
+
+                            </div>
                             <div class="col-md-1"></div>
 
                             <div class="col-md-3 panel" id="borders">
-                                <h3 id="headers_borders" >
+                                <h3 id="headers_borders">
                                     Quiz: Cyber Security: <br />Teens
                                 </h3>
                                 @Html.ActionLink("Take the quiz now!", "Quiz", new { quizId = 2 }, new { @class = "btn btn-info", @title = "", @style = "margin-left: 50px;margin-bottom:10px; " })
@@ -80,5 +80,19 @@
             }
         </div>
     </div>
-
+    <h1 id="headers"> <center> More Games:</center></h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="p_text">
+                <center> <a href="http://www.digizen.org/resources/digizen-game.aspx"> Digizen Org</a></center>
+             
+            </p>
+            <p class="p_text">
+                <center> <a href="http://www.carnegiecyberacademy.com/missions.html"> Carnegie Cyber Academy</a></center>
+            </p>
+            <p class="p_text">
+                <center> <a href="https://www.consumer.ftc.gov/media/game-0013-case-cyber-criminal"> Consumer Information </a></center>
+            </p>
+        </div>
+    </div>
 </body>
