--- a/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
@@ -81,6 +81,7 @@
         </div>
     </div>
     <h1 id="headers"> <center> More Games:</center></h1>
+
     <div class="row">
         <div class="col-lg-12">
             <p class="p_text">
@@ -91,7 +92,12 @@
                 <center> <a href="http://www.carnegiecyberacademy.com/missions.html"> Carnegie Cyber Academy</a></center>
             </p>
             <p class="p_text">
-                <center> <a href="https://www.consumer.ftc.gov/media/game-0013-case-cyber-criminal"> Consumer Information </a></center>
+                <center> <a href="https://www.consumer.ftc.gov/media/game-0013-case-cyber-criminal"> Consumer Information(Cyber Criminal)</a></center>
+            </p>
+            <p class="p_text">
+            <center><a href="https://safeandsecureonline.org/children/"> Safe and Secure Online(Cyber Safety Adventures)</a></center></p>
+            <p class="p_text">
+                <center><a href="https://www.consumer.ftc.gov/media/game-0008-mission-laptop-security"> Consumer Information(Laptop Security)</a></center>
             </p>
         </div>
     </div>
