All Links Updated Now

--- a/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
@@ -86,7 +86,7 @@
         <div class="col-lg-12">
             <p class="p_text">
                 <center> <a href="http://www.digizen.org/resources/digizen-game.aspx"> Digizen Org</a></center>
-             
+
             </p>
             <p class="p_text">
                 <center> <a href="http://www.carnegiecyberacademy.com/missions.html"> Carnegie Cyber Academy</a></center>
@@ -95,7 +95,8 @@
                 <center> <a href="https://www.consumer.ftc.gov/media/game-0013-case-cyber-criminal"> Consumer Information(Cyber Criminal)</a></center>
             </p>
             <p class="p_text">
-            <center><a href="https://safeandsecureonline.org/children/"> Safe and Secure Online(Cyber Safety Adventures)</a></center></p>
+                <center><a href="https://safeandsecureonline.org/children/"> Safe and Secure Online(Cyber Safety Adventures)</a></center>
+            </p>
             <p class="p_text">
                 <center><a href="https://www.consumer.ftc.gov/media/game-0008-mission-laptop-security"> Consumer Information(Laptop Security)</a></center>
             </p>
