--- a/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
@@ -19,9 +19,9 @@
     <div class="col-md-4 align-center" id="borders">
         <h3 id="headers_borders"><strong>Most Viewed Links</strong></h3>
         <ul class="align-left" id="p_textborders">
-            <li><A HREF="http://praesidium.azurewebsites.net">Website1</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Website2</A></li>
-            <li><A HREF="http://praesidium.azurewebsites.net">Website3</A></li>
+            <li><A HREF="https://staysafeonline.org/">Stay Safe Online</A></li>
+            <li><A HREF="https://www.dhs.gov/topic/cybersecurity">Dhs Gov</A></li>
+            <li><A HREF="https://safeandsecureonline.org/children/">Safe and Secure Online</A></li>
         </ul>
     </div>
 </div>
