--- a/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-12">
             <figure class="effect-caged img-responsive">
-                <img src="~/Content/Images/teacher.png" style="width:100%;max-height:330px;" />
+                <img src="~/Content/Images/teacher.jpg" style="width:100%;max-height:330px;" />
             </figure>
         </div>
     </div>
