Got Rid Of Ferris Picture

--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -33,7 +33,7 @@
             <div class="container">
 
                 <!-- Added Scalability to this photo as well *Caleb*-->
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" style="width: 100%;" class="img-responsive" />
+               <center> <img src="~/Content/Images/bulldog.png" g" style ="height: 300px; width: 60%;" class="img-responsive" /> </center>
                 <br /><br />
                 <!-- Changed from list to paragraph with breaks for looks, styled a bit, and added some buttons to department sites *Caleb* -->
                 <p class="panel panel-default">
