--- a/Praesidium/Praesidium/Views/Admin/Users.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Users.cshtml
@@ -33,6 +33,9 @@
             <th>
                 Email
             </th>
+            <th>
+                Role
+            </th>
             <th style="width: 165px;">
                 Actions
             </th>
@@ -52,6 +55,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ShUserType.Type)
                 </td>
                 <td>
                     @Html.ActionLink(" ", "UsersEdit", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-edit", @title = "Edit User" })
