fix quiz page navigation

--- a/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
@@ -72,26 +72,41 @@
             }
         </div>
     </div>
-    <h1 id="headers"> <center> More Games:</center></h1>
+    <h1 id="headers">
+        <div style="text-align: center;" >Games:</div></h1>
 
     <div class="row">
         <div class="col-lg-12">
             <p class="p_text">
-                <center> <a href="http://www.digizen.org/resources/digizen-game.aspx"> Digizen Org</a></center>
+                <div style="text-align: center;" > <a href="http://www.digizen.org/resources/digizen-game.aspx"> Digizen Org</a></div>
 
             </p>
             <p class="p_text">
-                <center> <a href="http://www.carnegiecyberacademy.com/missions.html"> Carnegie Cyber Academy</a></center>
+                <div style="text-align: center;" > <a href="http://www.carnegiecyberacademy.com/missions.html"> Carnegie Cyber Academy</a></div>
             </p>
             <p class="p_text">
-                <center> <a href="https://www.consumer.ftc.gov/media/game-0013-case-cyber-criminal"> Consumer Information(Cyber Criminal)</a></center>
+                <div style="text-align: center;" > <a href="https://www.consumer.ftc.gov/media/game-0013-case-cyber-criminal"> Consumer Information(Cyber Criminal)</a></div>
             </p>
             <p class="p_text">
-                <center><a href="https://safeandsecureonline.org/children/"> Safe and Secure Online(Cyber Safety Adventures)</a></center>
+                <div style="text-align: center;" ><a href="https://safeandsecureonline.org/children/"> Safe and Secure Online(Cyber Safety Adventures)</a></div>
             </p>
             <p class="p_text">
-                <center><a href="https://www.consumer.ftc.gov/media/game-0008-mission-laptop-security"> Consumer Information(Laptop Security)</a></center>
+                <div style="text-align: center;" ><a href="https://www.consumer.ftc.gov/media/game-0008-mission-laptop-security"> Consumer Information(Laptop Security)</a></div>
             </p>
         </div>
     </div>
-</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
