updating CIS team page

--- a/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
+++ b/Praesidium/Praesidium/Views/Home/CISTeam.cshtml
@@ -10,12 +10,12 @@
         <!-- First Member's Profile -->
         <div class="col-md-4" style="margin-left:150px">
             <div class="thumbnail">
-                <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                <img src="~/Content/Images/Ryan.jpg" alt="Thumbnail_img">
                 <div class="caption text-center">
                     <h4>Ryan McCarty</h4>
                     <h4>Role: Scrum Master</h4>
                     <div class="btn btn-danger" data-toggle="collapse" data-target="#Ryan">Learn More</div>
-                    <div id="Ryan" class="collapse">More Info About Ryan</div>
+                    <div id="Ryan" class="collapse">Ryan is a northern michigan resident who is currently working towards his Bachelor’s degree in Information System at Ferris State University. He currently works for a software development company where he spends his time working on a large scale ASP.NET MVC application. He is very passionate about learning new technologies and is always working to improve his development skills.</div>
                 </div>
             </div>
         </div>
