--- a/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/NavigationItems.cshtml
@@ -17,9 +17,9 @@
             <h4><b>List of Navigation Items</b></h4>
         </div>
         <div class="col-md-2">
-            <p>
+            @*<p>
                 @Html.ActionLink("Create New", "NavigationItemsCreate", null, new { @class = "btn btn-info pull-right" })
-            </p>
+            </p>*@
         </div>
         <br />
     </div>
@@ -68,7 +68,7 @@
                     @*<button style="font-family: 'Agency FB'; color: white" id="editModal" data-target="#edit" data-toggle="modal" data-id="@item.RecId" data-controller="@item.Controller" data-action="@item.Action" data-displaytext="@item.DisplayText" data-section="@item.FkShSySection" data-active="@item.IsActive"><span class="glyphicon glyphicon-edit"></span></button> |*@
                     @Html.ActionLink(" ", "NavigationItemsEdit", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-edit", @title = "Edit Navigation Item" })
                     @Html.ActionLink(" ", "NavigationItemsDetails", new { id = item.RecId }, new { @class = "btn btn-info glyphicon glyphicon-eye-open", @title = "View Details" })
-                    @Html.ActionLink(" ", "NavigationItemsDelete", new { id = item.RecId }, new { @class = "btn btn-danger glyphicon glyphicon-trash", @title = "Delete Navigation Item" })
+                    @*@Html.ActionLink(" ", "NavigationItemsDelete", new { id = item.RecId }, new { @class = "btn btn-danger glyphicon glyphicon-trash", @title = "Delete Navigation Item" })*@
                 </td>
             </tr>
         }
