--- a/Praesidium/Praesidium/Views/Admin/UserTypesCreate.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/UserTypesCreate.cshtml
@@ -1,15 +1,12 @@
 ﻿@model Praesidium.Data_Models.Admin.ShUserType
-
 @{
     ViewBag.Title = "UserTypesCreate";
 }
-
 <h2>UserTypesCreate</h2>
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>ShUserType</h4>
         <hr />
@@ -22,16 +19,12 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsDeleted)
-                    @Html.ValidationMessageFor(model => model.IsDeleted, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
+        <label>
+            <input type="radio" name="radNavigation" id="NavigationR" />
+            <label for="NavigationR">Read</label>
+            <input type="radio" name="radQuestion" id="questionYes" data-bind="checkedValue: true, checked: data().HasBlackouts" />
+            <label for="questionYes">Yes</label>
+        </label>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -39,7 +32,6 @@
         </div>
     </div>
 }
-
 <div>
     @Html.ActionLink("Back to List", "UserTypes")
 </div>
